# Helicopter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  clippy.toml
crates/acoustics/: Cargo.toml
crates/acoustics/src/: bessel.rs  broadband.rs  lib.rs  rotational.rs  solution.rs  spl.rs  thickness.rs
crates/acoustics/tests/: acoustics_validation.rs
crates/actuation/: Cargo.toml
crates/actuation/src/: control_surface.rs  lib.rs  loads.rs  material.rs  motor.rs  plan.rs  power_budget.rs  scaling.rs  selectable.rs  service.rs  service_material.rs  servo.rs
crates/actuation/tests/: actuation_validation.rs
crates/airfoil/: Cargo.toml
crates/airfoil/src/: airfoil.rs  lib.rs  linear.rs  table.rs
crates/autorotation/: Cargo.toml
crates/autorotation/src/: descent.rs  forward.rs  height_velocity.rs  index.rs  inflow.rs  lib.rs  rotor_decay.rs  solution.rs  survivability.rs
crates/autorotation/tests/: autorotation_validation.rs  r22_external_validation.rs
crates/bemt/: Cargo.toml
crates/bemt/src/: config.rs  lib.rs  solution.rs  solver.rs  station.rs  tip_loss.rs
crates/bms/: Cargo.toml
crates/bms/src/: balancing.rs  benchmark.rs  components.rs  lib.rs  life_sizing.rs  pack_build.rs  protection.rs  sizing.rs  soc_estimator.rs  thermal_envelope.rs
crates/bms/tests/: battery_external_validation.rs
crates/cell/: Cargo.toml
crates/cell/src/: aging.rs  cell.rs  lib.rs  library.rs  temperature.rs  thevenin.rs
crates/cell/tests/: discharge.rs
crates/cfd/: Cargo.toml
crates/cfd_airfoil/: Cargo.toml
crates/cfd_airfoil/src/: lib.rs  viterna.rs
crates/cfd_airfoil/tests/: rotor_integration.rs
crates/charging/: Cargo.toml
crates/charging/src/: charge.rs  equipment.rs  fast.rs  lib.rs  mains.rs  ratio.rs  solar.rs  solution.rs  source.rs
crates/cli/: Cargo.toml
crates/cli/src/: attitude_cli.rs  battery_build_cli.rs  bms_cli.rs  build_cli.rs  cfd_cli.rs  charge_build_cli.rs  charging_cli.rs  design_cli.rs  dynamics_cli.rs  final_report_build.rs  final_report_cli.rs  flapping_cli.rs  fly_cli.rs  forward_cli.rs  hover_cli.rs  inflow_cli.rs  lateral_cli.rs  lib.rs  main.rs  mass_properties.rs  mission_cli.rs  report.rs  sas_cli.rs  sim_cli.rs  studio_scene.rs  study.rs  synthesize_cli.rs  trim_cli.rs  ui_cli.rs  ui_export.rs  ui_server.rs
crates/cli/tests/: smoke.rs  ui_export.rs
crates/cost/: Cargo.toml
crates/coupled/: Cargo.toml
crates/coupled/src/: config.rs  lib.rs  loads.rs  solution.rs  solver.rs
crates/coupled/tests/: coupled_validation.rs
crates/design/: Cargo.toml
crates/design/src/: blade_opt.rs  candidate.rs  envelope.rs  lib.rs  metrics.rs  mission_profile.rs  optimize_design.rs  recommend.rs  report.rs  sizing.rs  sweep.rs  upsizing.rs  weight_closure.rs
crates/design/tests/: blade_opt_validation.rs  design_validation.rs  envelope_validation.rs  mission_profile_validation.rs  optimize_design_validation.rs  sizing_validation.rs  synthesis_validation.rs  weight_closure_validation.rs
crates/dynamics/: Cargo.toml
crates/dynamics/src/: aero.rs  complex.rs  context.rs  coupled8.rs  derivatives.rs  eigen.rs  flap_general.rs  full_aero.rs  inflow_coupling.rs  lateral.rs  lib.rs  model.rs  pitt_peters.rs  schur.rs
crates/dynamics/tests/: bo105_external_validation.rs  coupled_validation.rs  dynamics_validation.rs  lateral_validation.rs  pitt_peters_validation.rs  rotation_validation.rs  schur_validation.rs  uh60_external_validation.rs
crates/fea/: Cargo.toml
crates/flapping/: Cargo.toml
crates/flapping/src/: closed_form.rs  config.rs  controls.rs  harmonics.rs  lib.rs  linalg.rs  properties.rs  solution.rs  solver.rs
crates/flapping/tests/: flapping_validation.rs
crates/forward/: Cargo.toml
crates/manufacture/: Cargo.toml
crates/manufacture/src/: airfoil_coords.rs  assembly.rs  assembly_export.rs  blade.rs  bond_creep.rs  boom.rs  build_volume.rs  diagrams.rs  export.rs  fasteners.rs  fatigue.rs  fea_structural.rs  fuselage.rs  hub.rs  joint_structural.rs  landing_gear.rs  lib.rs  mast.rs  materials.rs  mesh.rs  mount.rs  naca_section.rs  part.rs  print_plan.rs  resonance.rs  root_fea.rs  root_fitting.rs  root_solid.rs  shopping.rs  sizing.rs  split.rs  split_geometry.rs  step_brep.rs  structural.rs  svg.rs  swashplate.rs  tail_rotor.rs  thermal_softening.rs
crates/mission/: Cargo.toml
crates/mission/src/: climb.rs  electrical.rs  endurance.rs  hover_mission.rs  hover_trim.rs  lib.rs  scenario.rs
crates/mission/tests/: end_to_end.rs
crates/optimize/: Cargo.toml
crates/pack/: Cargo.toml
crates/powertrain/: Cargo.toml
crates/rotor/: Cargo.toml
crates/sim/: Cargo.toml
crates/sim/src/: analysis.rs  attitude_hold.rs  control.rs  coupled_march.rs  driven_equilibrium.rs  driven_march.rs  eom.rs  lib.rs  pi_attitude.rs  rigid_body.rs  rk4.rs  sas.rs  sim_setup.rs  simulate.rs  velocity_hold.rs
crates/sim/tests/: attitude_hold_validation.rs  coupled_march_validation.rs  driven_validation.rs  pi_attitude_validation.rs  sas_validation.rs  sim_validation.rs  velocity_hold_validation.rs
crates/thermal/: Cargo.toml
crates/trim/: Cargo.toml
crates/trim/src/: aircraft.rs  condition.rs  lib.rs  newton.rs  residual.rs  solution.rs  solver.rs
crates/trim/tests/: bo105_trim_validation.rs  oh6a_gain_discriminator.rs  trim_validation.rs  uh60_trim_validation.rs
crates/validation/: BO105_HEFFLEY_CR3144.md  Cargo.toml  MILESTONE6_ATTITUDE_GAIN_STUDY.md  MILESTONE6_BO105_PREREG.md  MILESTONE6_CYCLIC_PREREG.md  MILESTONE6_FLAP_FIX_PREREG.md  MILESTONE6_OH6A_GAIN_PREREG.md  MILESTONE6_PARAMETER_MAPPING.md  MILESTONE6_PREDICTIONS.md  MILESTONE6_RESULTS.md  MILESTONE6_SHAFT_TILT_PREREG.md  MILESTONE6_TIPLOSS_PREREG.md  MILESTONE6_TRIM_PREREG.md  UH60_GENHEL_TM85890.md
crates/validation/src/: caradonna_tung.rs  harrington.rs  lib.rs  oracle.rs
crates/validation/tests/: validation.rs
ui/: index.html  shot.sh
ui/css/: app.css
ui/js/: app.js
validation/: AUTOROTATION_EXTERNAL_PREREG.md  AUTOROTATION_EXTERNAL_RESULTS.md  BATTERY_EXTERNAL_PREREG.md  BATTERY_EXTERNAL_RESULTS.md  ORACLE_COVERAGE.md
(+59 files in other folders)
