[package]
name = "helisim-actuation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parametric motor + control-servo selection: real, cited catalogues (Scorpion motors, Align servos) chosen smallest-adequate against design-derived loads, scaling by product family."

[dependencies]
helisim-design = { path = "../design" }
helisim-rotor = { path = "../rotor" }
helisim-fea = { path = "../fea" }

[dev-dependencies]
helisim-airfoil = { path = "../airfoil" }
helisim-bemt = { path = "../bemt" }
