[package]
name = "helisim-design"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model-scale sizing study: composes the validated cores into the priority vector (safety/airtime/efficiency/noise) over a design point."

[dependencies]
helisim-airfoil = { path = "../airfoil" }
helisim-rotor = { path = "../rotor" }
helisim-bemt = { path = "../bemt" }
helisim-mission = { path = "../mission" }
helisim-autorotation = { path = "../autorotation" }
helisim-acoustics = { path = "../acoustics" }
helisim-cost = { path = "../cost" }
